--- a/blog_posts/endeavor.html
+++ b/blog_posts/endeavor.html
@@ -58,23 +58,22 @@
                                     afterward. I didn't like the hardware or software components of computer engineering but struggled through it simply 
                                     because I didn't want to quit. A few weeks later I found myself at a hackathon with my fraternity brother, and everything 
                                     changed. For context, a <b>hackathon</b> is a design sprint-like event where people with technical backgrounds come together, form teams, 
-                                    and make cool stuff. I was amazed by what I saw. Cools apps and hardware products were made right before my eyes. Honestly, 
-                                    it felt like a movie scene. Me and my fraternity brother built a magic mirror during that hackathon. I probably did about .5% of anything 
-                                    for the project, but the effect it had on me was drastic. I wanted to build things from scratch like I witnessed during the hackathon. 
+                                    and make cool stuff. What I saw amazed me. Detailed software apps and hardware products formed before my eyes. Honestly, 
+                                    it felt like a movie scene. My fraternity brother and I built a magic mirror during that hackathon. I probably did about .5% of anything 
+                                    for the project, but the effect it had on me was drastic. I wanted to build things from scratch as I saw during the hackathon.
                                     I later decided to move from computer engineering to computer science as my interest had geared toward software.
                                 </p>
 
                                 <p>
                                     As I started to become more infatuated with programming, I found myself watching
                                     videos
-                                    and reading articles other developers made. The videos and articles inspired me to
-                                    be
-                                    better and helped guide my next steps in my journey to become a "real developer". I
+                                    and reading articles other developers made. These videos and articles inspired the next 
+                                    steps in my journey to become a "real developer". I
                                     would always read articles with titles like "How to become a web developer in 2017"
                                     and
                                     would take down notes on the things they deemed necessary. Articles would vary about
                                     some of the necessary skills, but from a high level, they were consistent. I
-                                    had no prior web development skills and really only chose that path because of my
+                                    had no prior web development skills and only chose that path because of my
                                     fraternity brother, the person who helped me find the joy in programming. I would look at
                                     random things about HTML and CSS, and do it myself, but I felt like everything I
                                     made
@@ -90,7 +89,7 @@
                                 </p>
 
                                 <p>
-                                    I am starting my own personal blog, <i>Endeavor</i>, for three reasons.
+                                    I am starting my blog, <i>Endeavor</i>, for three reasons.
                                     <ol>
                                         <li>
                                             <b>To monitor.</b>
@@ -105,7 +104,7 @@
                                             technologies, how I used sed technologies, and so much more. I want to
                                             review
                                             my leadership moments, my team experiences, and growth in unexpected territories I would 
-                                            have never imagined to be important during my initial start to becoming a
+                                            have never imagined being important during my initial start to becoming a
                                             "real developer".
                                         </li>
 
@@ -118,7 +117,7 @@
                                             web
                                             development with Node.js and MongoDB. I have gained a lot from blog posts
                                             and
-                                            video tutorials regarding using a specific technology or tool. I want to
+                                            video tutorials about using a specific technology or tool. I want to
                                             give
                                             back like those who gave to me and other developers. Hopefully, my content
                                             will
@@ -129,10 +128,10 @@
                                         <li>
                                             <b>To inspire.</b>
                                             </br>
-                                            Personally, seeing another's journey motivates me to be the best I can be. I
-                                            have gained a lot from seeing the circumstance others were in compared to
+                                            Personally, seeing another's journey motivates me to be the best possible. I
+                                            have gained a lot from seeing the circumstance others were in earlier compared to
                                             where
-                                            they are currently. I plan to keep working hard, improving on my set of
+                                            they are. I plan to keep working hard, improving on my set of
                                             skills
                                             and learning new skills, and letting the world know about my successes
                                             and
