Removing html from href links

--- a/blog_posts/endeavor.html
+++ b/blog_posts/endeavor.html
@@ -70,7 +70,7 @@
             <div class="row blog-header">
                 <div class="col-12">
                     <div>
-                        <a href='../index.html' id="blog-name">Endeavor</a>
+                        <a href='../index' id="blog-name">Endeavor</a>
                         <p>An Attempt To Achieve A Goal</p>
                     </div>
                 </div>
