--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
             <div class="row blog-header">
                 <div class="col-12">
                     <div>
-                        <a href='./index' id="blog-name">Endeavor</a>
+                        <a href='./' id="blog-name">Endeavor</a>
                         <p>An Attempt To Achieve A Goal</p>
                     </div>
                     <p>Personal Blog by Chidi Udeze</p>
