--- a/blog_posts/writing_my_first_software_requirements_document.html
+++ b/blog_posts/writing_my_first_software_requirements_document.html
@@ -56,7 +56,7 @@
     <link href="https://fonts.googleapis.com/css2?family=B612&display=swap" rel="stylesheet">
     <link rel="shortcut icon" type="image/jpg" href="../icons8-astronaut-48.png" />
     <link rel="stylesheet" href="../index.css">
-    <title>Endeavor</title>
+    <title>Writing My First SRD</title>
 </head>
 
 <body>
